test/Fail/Issue6001.err
Issue6001.agda:13.1-23: error: [CannotGenerateHCompClause]
Cannot generate hcomp clause at type ?0
when checking the definition of bug
